# JoinUPTest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-ci.yml  master-ci.yml
JoinUPTest/: __init__.py  admin.py  apps.py  custom_decorators.py  models.py  receivers.py  serializers.py  urls.py  views.py
JoinUPTest/api/v1/: urls.py
JoinUPTest/migrations/: 0001_initial.py  0002_codeemail_codephone_user_email_validated_and_more.py  0003_codeemail_user_codephone_user.py  0004_activationcode_remove_codephone_user_and_more.py  0005_alter_activationcode_code_alter_activationcode_type.py
JoinUPTest/tests/: test_e2e.py
djangoProject/: celery.py  settings.py  urls.py
